# whatsapp_bot

./: .gitignore  README.md  app.py  config.py  contact_manager.py  conversation_store.py  dialogue_flow.json  dialogue_manager.py  llm_adapter.py  pyproject.toml  send_outreach.py  test_config.py  whatsapp_sender.py
data/conversations/: conversations_20251015.json
dialogue/: mortgage.flow.json
